cmake_minimum_required(VERSION 3.6)
project(OpenSportSim_engine)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(OpenGL_GL_PREFERENCE "GLVND")
find_package(Vulkan REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLFW3 REQUIRED)
add_library(OpenSportSim SHARED source/platforms/agnostic.cpp source/opengl.cpp source/glad.c source/platforms/glfw_handle.cpp source/core.cpp)
add_executable(Client source/main.cpp)
target_link_libraries(Client OpenSportSim)
target_include_directories(Client PRIVATE include/)
target_link_libraries(OpenSportSim ${Vulkan_LIBRARIES} glfw OpenGL::GL)
target_include_directories(OpenSportSim PRIVATE ${Vulkan_INCLUDE_DIRS} PUBLIC include/)
set_property(TARGET OpenSportSim PROPERTY CXX_STANDARD 20)
set_property(TARGET Client PROPERTY CXX_STANDARD 20)
